# youbot_driver-release

./: 0001-postinst-script-added.patch  0002-postinst-and-postrm-scripts-added.patch  0003-postinst-and-postrm-scripts-added.patch  0004-postinst-and-postrm-scripts-added.patch  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  tracks.yaml
config/: youbot-manipulator.cfg
debian/: changelog  control  gbp.conf  postinst  postrm  rules
include/base-kinematic/: FourSwedishWheelOmniBaseKinematic.hpp  FourSwedishWheelOmniBaseKinematicConfiguration.hpp  WheeledBaseKinematic.hpp
include/generic/: ConfigFile.hpp  Logger.hpp  PidController.hpp  Time.hpp
include/generic-gripper/: Gripper.hpp  GripperData.hpp  GripperParameter.hpp
include/generic-joint/: Joint.hpp  JointData.hpp  JointParameter.hpp  JointTrajectory.hpp
include/one-dof-gripper/: OneDOFGripper.hpp  OneDOFGripperData.hpp
include/testing/: YouBotArmTest.hpp  YouBotArmTestWithoutThread.hpp  YouBotBaseKinematicsTest.hpp  YouBotBaseTest.hpp  YouBotBaseTestWithoutThread.hpp  YouBotGripperTest.hpp
include/youbot/: DataTrace.hpp  EthercatMaster.hpp  EthercatMasterInterface.hpp  EthercatMasterWithThread.hpp  EthercatMasterWithoutThread.hpp  GripperDataTrace.hpp  JointLimitMonitor.hpp  JointTrajectoryController.hpp  YouBotBase.hpp  YouBotGripper.hpp  YouBotGripperBar.hpp  YouBotGripperParameter.hpp  YouBotJoint.hpp  YouBotJointParameter.hpp  YouBotJointParameterPasswordProtected.hpp  YouBotManipulator.hpp  (+3 more)
src/display/: CMakeLists.txt  DisplayIpAddress.cpp
(+46 files in other folders)
